add all new information

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="menu">
             <li class="menu-item">
-              <a class="menu-link" href="./index.html">Studio</a>
+              <a class="menu-link current" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link" href="">Portfolio</a>
@@ -67,6 +67,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-list-item">
+              <div class="icon-box">
+                <svg class="icon-antenna" width="64" height="64">
+                  <use href="./images/icons-svg.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Strategy</h3>
               <p class="features-list-text">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="icon-box">
+                <svg class="icon-clock" width="64" height="64">
+                  <use href="./images/icons-svg.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Punctuality</h3>
               <p class="features-list-text">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +91,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="icon-box">
+                <svg class="icon-diagram" width="64" height="64">
+                  <use href="./images/icons-svg.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Diligence</h3>
               <p class="features-list-text">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="icon-box">
+                <svg class="icon-astronaut" width="64" height="64">
+                  <use href="./images/icons-svg.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Technologies</h3>
               <p class="features-list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -115,6 +135,36 @@
                 <h3 class="team-list-name">Mark Guerrero</h3>
                 <p class="team-list-text">Product Designer</p>
               </div>
+              <ul class="icons-list">
+                <li>
+                  <div class="team-icon">
+                    <svg class="icon-instagram" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li>
+                  <div class="team-icon">
+                    <svg class="icon-twitter" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li>
+                  <div class="team-icon">
+                    <svg class="icon-facebook" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li>
+                  <div class="team-icon">
+                    <svg class="icon-linkedin" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
