--- a/index.html
+++ b/index.html
@@ -131,41 +131,44 @@
                 width="264"
                 height="260"
               />
-              <div class="name-card">
-                <h3 class="team-list-name">Mark Guerrero</h3>
-                <p class="team-list-text">Product Designer</p>
+              <div class="team-card-full">
+                <div class="name-card">
+                  <h3 class="team-list-name">Mark Guerrero</h3>
+                  <p class="team-list-text">Product Designer</p>
+                </div>
+                <ul class="icons-list">
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-instagram" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-instagram"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-twitter" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-twitter"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-facebook" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-facebook"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-linkedin" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
-              <ul class="icons-list">
-                <li>
-                  <div class="team-icon">
-                    <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                </li>
-                <li>
-                  <div class="team-icon">
-                    <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                </li>
-                <li>
-                  <div class="team-icon">
-                    <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                </li>
-                <li>
-                  <div class="team-icon">
-                    <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </li>
-              </ul>
             </li>
+
             <li class="team-list-item">
               <img
                 class="team-list-img"
@@ -174,9 +177,41 @@
                 width="264"
                 height="260"
               />
-              <div class="name-card">
-                <h3 class="team-list-name">Tom Ford</h3>
-                <p class="team-list-text">Frontend Developer</p>
+              <div class="team-card-full">
+                <div class="name-card">
+                  <h3 class="team-list-name">Tom Ford</h3>
+                  <p class="team-list-text">Frontend Developer</p>
+                </div>
+                <ul class="icons-list">
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-instagram" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-instagram"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-twitter" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-twitter"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-facebook" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-facebook"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-linkedin" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -187,9 +222,41 @@
                 width="264"
                 height="260"
               />
-              <div class="name-card">
-                <h3 class="team-list-name">Camila Garcia</h3>
-                <p class="team-list-text">Marketing</p>
+              <div class="team-card-full">
+                <div class="name-card">
+                  <h3 class="team-list-name">Camila Garcia</h3>
+                  <p class="team-list-text">Marketing</p>
+                </div>
+                <ul class="icons-list">
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-instagram" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-instagram"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-twitter" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-twitter"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-facebook" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-facebook"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-linkedin" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -200,9 +267,41 @@
                 width="264"
                 height="260"
               />
-              <div class="name-card">
-                <h3 class="team-list-name">Daniel Wilson</h3>
-                <p class="team-list-text">UI Designer</p>
+              <div class="team-card-full">
+                <div class="name-card">
+                  <h3 class="team-list-name">Daniel Wilson</h3>
+                  <p class="team-list-text">UI Designer</p>
+                </div>
+                <ul class="icons-list">
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-instagram" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-instagram"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-twitter" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-twitter"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-facebook" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-facebook"></use>
+                      </svg>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="team-icon">
+                      <svg class="icon-linkedin" width="16" height="16">
+                        <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
