--- a/index.html
+++ b/index.html
@@ -137,28 +137,28 @@
                   <p class="team-list-text">Product Designer</p>
                 </div>
                 <ul class="icons-list">
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-instagram"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-twitter" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-twitter"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-facebook" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-facebook"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-linkedin" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-linkedin"></use>
@@ -183,28 +183,28 @@
                   <p class="team-list-text">Frontend Developer</p>
                 </div>
                 <ul class="icons-list">
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-instagram"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-twitter" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-twitter"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-facebook" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-facebook"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-linkedin" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-linkedin"></use>
@@ -228,28 +228,28 @@
                   <p class="team-list-text">Marketing</p>
                 </div>
                 <ul class="icons-list">
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-instagram"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-twitter" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-twitter"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-facebook" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-facebook"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-linkedin" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-linkedin"></use>
@@ -273,28 +273,28 @@
                   <p class="team-list-text">UI Designer</p>
                 </div>
                 <ul class="icons-list">
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-instagram" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-instagram"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-twitter" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-twitter"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-facebook" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-facebook"></use>
                       </svg>
                     </div>
                   </li>
-                  <li>
+                  <li class="icons-list-item">
                     <div class="team-icon">
                       <svg class="icon-linkedin" width="16" height="16">
                         <use href="./images/icons-svg.svg#icon-linkedin"></use>
@@ -314,78 +314,122 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-img"
-                src="./images/our-portfolio/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-list-img"
+                  src="./images/our-portfolio/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-item">
                 <h3 class="portfolio-list-title">Banking App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-img"
-                src="./images/our-portfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-list-img"
+                  src="./images/our-portfolio/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-item">
                 <h3 class="portfolio-list-title">Cashless Payment</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-img"
-                src="./images/our-portfolio/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-list-img"
+                  src="./images/our-portfolio/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item">
                 <h3 class="portfolio-list-title">Meditation App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-img"
-                src="./images/our-portfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-list-img"
+                  src="./images/our-portfolio/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item">
                 <h3 class="portfolio-list-title">Taxi Service</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-img"
-                src="./images/our-portfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-list-img"
+                  src="./images/our-portfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item">
                 <h3 class="portfolio-list-title">Screen Illustrations</h3>
                 <p class="portfolio-list-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-img"
-                src="./images/our-portfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-list-img"
+                  src="./images/our-portfolio/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item">
                 <h3 class="portfolio-list-title">Online Courses</h3>
                 <p class="portfolio-list-text">Marketing</p>
@@ -397,14 +441,49 @@
     </main>
     <!-- ==============FOOTER============== -->
     <footer class="page-footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <h2 class="footer-title">Social media</h2>
+          <ul class="social-media-list">
+            <li>
+              <div class="footer-icon">
+                <svg class="icon-instagram" width="16" height="16">
+                  <use href="./images/icons-svg.svg#icon-instagram"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="footer-icon">
+                <svg class="icon-twitter" width="16" height="16">
+                  <use href="./images/icons-svg.svg#icon-twitter"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="footer-icon">
+                <svg class="icon-facebook" width="16" height="16">
+                  <use href="./images/icons-svg.svg#icon-facebook"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="footer-icon">
+                <svg class="icon-linkedin" width="16" height="16">
+                  <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
