add all new information

--- a/index.html
+++ b/index.html
@@ -131,39 +131,31 @@
                 width="264"
                 height="260"
               />
-              <div class="team-card-full">
-                <div class="name-card">
-                  <h3 class="team-list-name">Mark Guerrero</h3>
-                  <p class="team-list-text">Product Designer</p>
-                </div>
+
+              <div class="name-card">
+                <h3 class="team-list-name">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-instagram" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-instagram"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-instagram" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-twitter" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-twitter"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-twitter" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-facebook" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-facebook"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-facebook" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-linkedin" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-linkedin"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-linkedin" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                    </svg>
                   </li>
                 </ul>
               </div>
@@ -177,43 +169,35 @@
                 width="264"
                 height="260"
               />
-              <div class="team-card-full">
-                <div class="name-card">
-                  <h3 class="team-list-name">Tom Ford</h3>
-                  <p class="team-list-text">Frontend Developer</p>
-                </div>
+
+              <div class="name-card">
+                <h3 class="team-list-name">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-instagram" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-instagram"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-instagram" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-twitter" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-twitter"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-twitter" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-facebook" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-facebook"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-facebook" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-linkedin" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-linkedin"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-linkedin" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                    </svg>
                   </li>
                 </ul>
               </div>
             </li>
+
             <li class="team-list-item">
               <img
                 class="team-list-img"
@@ -222,39 +206,31 @@
                 width="264"
                 height="260"
               />
-              <div class="team-card-full">
-                <div class="name-card">
-                  <h3 class="team-list-name">Camila Garcia</h3>
-                  <p class="team-list-text">Marketing</p>
-                </div>
+
+              <div class="name-card">
+                <h3 class="team-list-name">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-instagram" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-instagram"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-instagram" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-twitter" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-twitter"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-twitter" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-facebook" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-facebook"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-facebook" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-linkedin" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-linkedin"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-linkedin" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                    </svg>
                   </li>
                 </ul>
               </div>
@@ -267,39 +243,31 @@
                 width="264"
                 height="260"
               />
-              <div class="team-card-full">
-                <div class="name-card">
-                  <h3 class="team-list-name">Daniel Wilson</h3>
-                  <p class="team-list-text">UI Designer</p>
-                </div>
+
+              <div class="name-card">
+                <h3 class="team-list-name">Daniel Wilson</h3>
+                <p class="team-list-text">UI Designer</p>
+
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-instagram" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-instagram"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-instagram" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-twitter" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-twitter"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-twitter" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-facebook" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-facebook"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-facebook" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                    </svg>
                   </li>
                   <li class="icons-list-item">
-                    <div class="team-icon">
-                      <svg class="icon-linkedin" width="16" height="16">
-                        <use href="./images/icons-svg.svg#icon-linkedin"></use>
-                      </svg>
-                    </div>
+                    <svg class="icon-linkedin" width="16" height="16">
+                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                    </svg>
                   </li>
                 </ul>
               </div>
@@ -442,7 +410,7 @@
     <!-- ==============FOOTER============== -->
     <footer class="page-footer">
       <div class="container footer-container">
-        <div>
+        <div class="logo-box">
           <a class="footer-logo" href="./index.html"
             >Web<span class="footer-logo-part">Studio</span></a
           >
@@ -452,35 +420,35 @@
           </p>
         </div>
         <div>
-          <h2 class="footer-title">Social media</h2>
+          <p class="footer-text">Social media</p>
           <ul class="social-media-list">
-            <li>
-              <div class="footer-icon">
+            <li class="social-media-list-item">
+              <a class="footer-icon">
                 <svg class="icon-instagram" width="16" height="16">
                   <use href="./images/icons-svg.svg#icon-instagram"></use>
                 </svg>
-              </div>
+              </a>
             </li>
-            <li>
-              <div class="footer-icon">
+            <li class="social-media-list-item">
+              <a class="footer-icon">
                 <svg class="icon-twitter" width="16" height="16">
                   <use href="./images/icons-svg.svg#icon-twitter"></use>
                 </svg>
-              </div>
+              </a>
             </li>
-            <li>
-              <div class="footer-icon">
+            <li class="social-media-list-item">
+              <a class="footer-icon">
                 <svg class="icon-facebook" width="16" height="16">
                   <use href="./images/icons-svg.svg#icon-facebook"></use>
                 </svg>
-              </div>
+              </a>
             </li>
-            <li>
-              <div class="footer-icon">
+            <li class="social-media-list-item">
+              <a class="footer-icon">
                 <svg class="icon-linkedin" width="16" height="16">
                   <use href="./images/icons-svg.svg#icon-linkedin"></use>
                 </svg>
-              </div>
+              </a>
             </li>
           </ul>
         </div>
