add all new information

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li class="features-list-item">
               <div class="icon-box">
                 <svg class="icon-antenna" width="64" height="64">
-                  <use href="./images/icons-svg.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-list-title">Strategy</h3>
@@ -81,7 +81,7 @@
             <li class="features-list-item">
               <div class="icon-box">
                 <svg class="icon-clock" width="64" height="64">
-                  <use href="./images/icons-svg.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-list-title">Punctuality</h3>
@@ -93,7 +93,7 @@
             <li class="features-list-item">
               <div class="icon-box">
                 <svg class="icon-diagram" width="64" height="64">
-                  <use href="./images/icons-svg.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-list-title">Diligence</h3>
@@ -105,7 +105,7 @@
             <li class="features-list-item">
               <div class="icon-box">
                 <svg class="icon-astronaut" width="64" height="64">
-                  <use href="./images/icons-svg.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-list-title">Technologies</h3>
@@ -139,22 +139,22 @@
                 <ul class="icons-list">
                   <li class="icons-list-item">
                     <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -176,22 +176,22 @@
                 <ul class="icons-list">
                   <li class="icons-list-item">
                     <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -214,22 +214,22 @@
                 <ul class="icons-list">
                   <li class="icons-list-item">
                     <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -251,22 +251,22 @@
                 <ul class="icons-list">
                   <li class="icons-list-item">
                     <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="icons-list-item">
                     <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -425,28 +425,28 @@
             <li class="social-media-list-item">
               <a class="footer-icon">
                 <svg class="icon-instagram" width="16" height="16">
-                  <use href="./images/icons-svg.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon">
                 <svg class="icon-twitter" width="16" height="16">
-                  <use href="./images/icons-svg.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon">
                 <svg class="icon-facebook" width="16" height="16">
-                  <use href="./images/icons-svg.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon">
                 <svg class="icon-linkedin" width="16" height="16">
-                  <use href="./images/icons-svg.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
