--- a/index.html
+++ b/index.html
@@ -138,24 +138,30 @@
 
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-instagram" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-twitter" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-facebook" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-linkedin" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -175,24 +181,30 @@
                 <p class="team-list-text">Frontend Developer</p>
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-instagram" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-twitter" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-facebook" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-linkedin" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -213,24 +225,30 @@
 
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-instagram" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-twitter" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-facebook" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-linkedin" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -250,24 +268,30 @@
 
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <svg class="icon-instagram" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-instagram" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-twitter" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-twitter" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-facebook" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-facebook" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li class="icons-list-item">
-                    <svg class="icon-linkedin" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="link-icon"
+                      ><svg class="icon-linkedin" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -424,28 +448,28 @@
           <ul class="social-media-list">
             <li class="social-media-list-item">
               <a class="footer-icon">
-                <svg class="icon-instagram" width="16" height="16">
+                <svg class="icon-instagram" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon">
-                <svg class="icon-twitter" width="16" height="16">
+                <svg class="icon-twitter" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon">
-                <svg class="icon-facebook" width="16" height="16">
+                <svg class="icon-facebook" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon">
-                <svg class="icon-linkedin" width="16" height="16">
+                <svg class="icon-linkedin" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
