add all new information

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <ul class="icons-list">
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-instagram" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
                         ></use></svg
@@ -147,19 +147,19 @@
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-twitter" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-facebook" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-linkedin" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -182,7 +182,7 @@
                 <ul class="icons-list">
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-instagram" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
                         ></use></svg
@@ -190,19 +190,19 @@
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-twitter" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-facebook" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-linkedin" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -226,7 +226,7 @@
                 <ul class="icons-list">
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-instagram" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
                         ></use></svg
@@ -234,19 +234,19 @@
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-twitter" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-facebook" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-linkedin" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -269,7 +269,7 @@
                 <ul class="icons-list">
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-instagram" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
                         ></use></svg
@@ -277,19 +277,19 @@
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-twitter" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-facebook" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
                     <a class="link-icon" href=""
-                      ><svg class="icon-linkedin" width="16" height="16">
+                      ><svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -448,28 +448,28 @@
           <ul class="social-media-list">
             <li class="social-media-list-item">
               <a class="footer-icon" href="">
-                <svg class="icon-instagram" width="24" height="24">
+                <svg class="ftr-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon" href="">
-                <svg class="icon-twitter" width="24" height="24">
+                <svg class="ftr-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon" href="">
-                <svg class="icon-facebook" width="24" height="24">
+                <svg class="ftr-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
               <a class="footer-icon" href="">
-                <svg class="icon-linkedin" width="24" height="24">
+                <svg class="ftr-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
